@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.13 2004/10/03 00:18:01 tv Exp $
+# $NetBSD: Makefile,v 1.14 2005/03/04 15:43:55 uebayasi Exp $
 
-DISTNAME=	wol-0.7.0
-PKGREVISION=	2
+DISTNAME=	wol-0.7.1
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=ahh/}
 
