@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9418 2005/03/04 15:32:35 uebayasi Exp $
+$NetBSD: CHANGES,v 1.9419 2005/03/04 15:43:54 uebayasi Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -1271,3 +1271,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added ZIPIdent-2.4 [wiz 2005-03-04]
 	Updated p5-Curses to 1.08b [wiz 2005-03-04]
 	Updated mew to 4.2 [uebayasi 2005-03-04]
+	Updated wol to 0.7.1 [uebayasi 2005-03-04]
